src/layout/main/index.scss
.app {
    font-display: swap;
    font-family: 'Inter', serif;
    .error-message {
        display: flex;
        flex-direction: column;
        align-items: center;
        padding: 12rem 0;
        font-size: 2rem;
        color: #fff;
    }
    .home-page,
    .tuition-page,
    .resources-page,
    .contact-page,
    .privacy-policy {
        animation: fadeIn 1s forwards;
        padding-top: 5rem;

        h1 {
            font-family: 'Unna', serif;
            font-size: 4rem;
            font-weight: 500;
            color: var(--main-font);
            margin: 0;
        }
        h2 {
            font-family: 'Unna', serif;
            font-size: 2.5rem;
            margin: 0;
            color: var(--main-font);
        }
        h3 {
            font-family: 'Unna', serif;
            font-size: 1.5rem;
            color: var(--main-font);
        }
        p {
            font-family: 'Inter', serif;
            font-size: 1.125rem;
            color: var(body-font);
        }
        .subtitle {
            display: flex;
            align-items: center;
            gap: 1rem;
            font-family: 'Unna', serif;
            font-size: 1.25rem;
            font-weight: bold;
            text-transform: uppercase;
            padding-bottom: 1em;
            color: var(--secondary);
        }    
        .indent {
            width: 2em;
            height: 2px;
            background: var(--secondary);
            border-radius: 5px;
        }
        .card-title {
            font-family: 'Unna', serif;
            font-size: 2rem;
            color: var(--main-font);
        }
        .card-body {
            font-family: 'Inter', serif;
            font-size: 1rem;
            font-weight: 400;
            padding-bottom: 20px;
            color: var(--body-font);
        }
        .text-box {
            display: flex;
            flex-direction: column;
            gap: 2rem;
            width: 50%;
            .hero-p {
                display: flex;
                align-items: center;
                gap: 1rem;
                .hero-indent {
                    width: 7.5em;
                    height: 2px;
                    background: var(--secondary);
                    border-radius: 5px;
                }
            }
        }
        .background {
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 400px;
            background: var(--background);
            z-index: -1;
        }
        .hero {
            display: flex;
            flex-direction: column;

            .hero-inner {
                padding: 5em 6em 4em;
            }

            .hero-img {
                width: 100%;
                height: 600px;
                object-fit: cover;
                object-position: center;
                display: block;
                opacity: 1;
                z-index: -1;
            }
        }

        .second-section,
        .third-section {
            position: relative;
            padding: 5em 6em;
        }
    }
}
.back-to-top {
    position: fixed;
    bottom: 15rem;
    right: 0;
    font-size: 28px;
    padding: 10px;
    margin: 0;
    background: var(--secondary);
    border-radius: 20% 0% 0% 20%;
    width: 50px;
    height: 50px;
    border: none;
    box-shadow: var(--button-shadow);
    cursor: pointer;
    animation: fadeInRight 2s;
    transition: all 1s ease-in-out;

    &:hover {
        background: #636363;
        color: #fff;
    }
}

@media screen and (max-width: 768px) {
    .app {
        .home-page,
        .tuition-page,
        .resources-page,
        .contact-page,
        .privacy-policy {
    
            h1 {
                font-size: 32px;
            }
    
            h2 {
                font-size: 24px;
            }
    
            h3 {
                font-size: 18px;
            }
    
            p {
                font-size: 14px;
            }
    
            .subtitle {
                font-size: 16px;
            }
    
            .card-title {
                font-size: 20px;
            }
    
            .card-body {
                font-size: 14px;
            }
            .text-box {
                gap: 0.5rem;
                width: 100%;

                .hero-p {
                    display: flex;
                    align-items: center;
                }
            }
            .hero {
                display: flex;
                flex-direction: column;

                .hero-inner {
                    padding: 2em;
                }

                .hero-img {
                    width: 100%;
                    height: 500px;
                    object-fit: cover;
                    object-position: center;
                    display: block;
                    opacity: 1;
                    z-index: -1;
                }
            }
            .second-section,
            .third-section {
                padding: 2em;
                position: relative;
                overflow: hidden;
            }
        }
    
    }
    
    .back-to-top {
        font-size: 20px;
        padding: 5px;
        width: 35px;
        height: 35px;
    }
}

